Fix vertical spacing of action buttons so they don't run together on smaller devices like iPads.

--- a/app/static/css/bootstrap-custom.css
+++ b/app/static/css/bootstrap-custom.css
@@ -31,8 +31,8 @@ label {
 }
 
 .btn-extra-vert {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /*
